# helpdesk

./: .env.example  Makefile  README.md  manage.py  pyproject.toml  requirements.txt
helpdesk/: settings.py  urls.py  wsgi.py
templates/: base.html
templates/registration/: login.html
tickets/: admin.py  auth_urls.py  forms.py  models.py  urls.py  views.py
tickets/management/commands/: init_data.py
tickets/migrations/: 0001_initial.py
tickets/templates/tickets/: _priority_badge.html  _status_badge.html  register.html  ticket_create.html  ticket_detail.html  ticket_list.html
