[project]
name = "helpdesk"
version = "0.1.0"
description = "Система учёта заявок в техподдержку (статусы, приоритеты, сроки)."
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["django>=6.0.5", "gunicorn>=23.0.0"]

[dependency-groups]
dev = ["django-stubs[compatible-mypy]>=6.0.3", "mypy>=1.20.2", "ruff>=0.15.12"]

[tool.uv]
package = false

[tool.django-stubs]
django_settings_module = "helpdesk.settings"

[tool.mypy]
strict = true
strict_bytes = true
local_partial_types = true
warn_unreachable = true
explicit_package_bases = true
mypy_path = ["."]
python_version = "3.13"
plugins = ["mypy_django_plugin.main"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
preview = true
